# Slides

./: CMakeLists.txt  Class Design.drawio  CommandExecutor.cpp  CommandExecutor.h  Main.cpp
Application/: App.cpp  App.hpp
Application/CLI/: Controller.cpp  Controller.hpp  IOController.cpp  IOController.hpp
Application/CLI/Parser/: Parser.cpp  Parser.hpp  Tokenizer.cpp  Tokenizer.hpp
Application/CLI/Parser/Commands/: AddCommand.cpp  AddCommand.hpp  Command.hpp  CommandFactory.cpp  CommandFactory.hpp  CommandRegistry.cpp  CommandRegistry.hpp  DelCommand.cpp  DelCommand.hpp  DisplayCommand.cpp  DisplayCommand.hpp  DrawCommand.cpp  DrawCommand.hpp  ExitCommand.cpp  ExitCommand.hpp  ListCommand.cpp  ListCommand.hpp  LoadCommand.cpp  LoadCommand.hpp  NullCommand.cpp  NullCommand.hpp  RedoCommand.cpp  RedoCommand.hpp  SaveCommand.cpp  SaveCommand.hpp  UndoCommand.cpp  UndoCommand.hpp
Application/Common/Controller/: ControllerBase.hpp
Application/Common/Exception/: Exception.hpp
Application/Common/Serialization/: ISerializable.hpp  ISerializer.hpp  JsonSerializable.cpp  JsonSerializable.hpp  JsonSerializer.hpp  JsonSerilaizer.cpp
Application/Controller/Evaluator/: Evaluator.cpp  Evaluator.hpp  Tokenizer.cpp  Tokenizer.hpp
Application/Controller/Evaluator/Commands/: AddCommand.cpp  AddCommand.hpp  Command.hpp  CommandFactory.cpp  CommandFactory.hpp  CommandRegistry.cpp  CommandRegistry.hpp  NullCommand.cpp  NullCommand.hpp
Application/Controller/Evaluator/Commands/Arguments/: Argument.cpp  Argument.hpp  ArgumentsRegistry.cpp  ArgumentsRegistry.hpp
Application/Controller/Evaluator/Parser/: Parser.cpp  Parser.hpp
Application/Director/: Director.cpp  Director.hpp
Application/Director/Actions/: Action.hpp  AddItemAction.cpp  AddItemAction.hpp  AddSlideAction.cpp  AddSlideAction.hpp  DelItemAction.cpp  DelItemAction.hpp  DelSlideAction.cpp  DelSlideAction.hpp
Application/Document/: Document.cpp  Document.hpp  Item.cpp  Item.hpp  Slide.cpp  Slide.hpp
Application/GUI/: Controller.cpp  Controller.hpp
Application/Model/: Container.cpp  Container.hpp  IContainer.hpp  IContainerItem.hpp
Application/Model/Document/: Document.hpp  Slide.cpp  Slide.hpp
Application/Model/Document/Shape/: Rectangle.hpp  Shape.hpp  ShapeFactory.cpp  ShapeFactory.hpp
Application/Rendering/: Render.cpp  Render.hpp  Renderer.cpp  Renderer.hpp
Application/Rendering/Shapes/: IShape.hpp  ITextualDsiplayable.hpp  IVisualDisplayable.hpp  ShapeBase.cpp  ShapeBase.hpp  ShapeRectangle.cpp  ShapeRectangle.hpp
Application/Rendering/Shapes/ShapeLib/: ShapeLib.cpp  ShapeLib.hpp
Application/View/: IOController.cpp  IOController.hpp
Utilities/: HelperUtility.hpp
